# erblogx

./: .gitignore  README.md  app.py  package-lock.json  package.json  space.yaml
.github/workflows/: keep_backend_alive.yml  scheduled_scraper.yml
app/: layout.js  page.js
app/(auth)/sign-in/: page.jsx
app/_components/: AppSidebar.jsx  ChatInputBox.jsx
backend/: Dockerfile  README_SETUP.md  blogs.opml  hn.py  main.py  pyproject.toml  requirements.txt  scraper.py  space.yaml  vector.py
frontend/: .gitignore  Dockerfile  middleware.js  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.js  not-found.js  provider.jsx
frontend/app/_components/: AppSidebar.jsx  ChatInputBox.jsx  ConfirmSignOutButton.jsx  Header.jsx  StartupTerminal.jsx
frontend/app/about/: page.jsx
frontend/app/discover/: page.jsx
frontend/app/lib/: page.jsx
frontend/components/ui/: ExpandableCardList.jsx  FloatingDock.jsx  Terminal.jsx
frontend/lib/: config.js
frontend/services/: supabase.jsx
services/: Shared.jsx
