[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["maskeen  <120341809+mxskeen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
feedparser = "^6.0.11"
supabase = "^2.16.0"
python-dotenv = "^1.1.1"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
